--- a/index.html
+++ b/index.html
@@ -23,28 +23,28 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="tela">
+                    <a href="youtube.html" target="tela">
                         <img src="imagens/logo-youtube.jpg" alt="Youtube">
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="tela">
+                    <a href="github.html" target="tela">
                         <img src="imagens/logo-github.jpg" alt="GitHub">
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="tela">
+                    <a href="instagram.html" target="tela">
                         <img src="imagens/logo-instagram.jpg" alt="Instagram">
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="tela">
-                        <img src="imagens/logo-twitter.jpg" alt="Twitter">
+                    <a href="facebook.html" target="tela">
+                        <img src="imagens/logo-facebook.jpg" alt="Facebook">
                     </a>
                 </li>
                 <li>
-                    <a href="#" target="tela">
-                        <img src="imagens/logo-facebook.jpg" alt="Facebook">
+                    <a href="linkedin.html" target="tela">
+                        <img src="imagens/logo-linkedin.jpg" alt="Linkedin">
                     </a>
                 </li>
             </ul>
