--- a/instagram.html
+++ b/instagram.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>Instagram</title>
     <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.jpg" alt="Youtube">
-    <a href="https://www.youtube.com/@alano.development" target="_blank">ACESSE</a>
+    <img src="imagens/tela-instagram.jpg" alt="Instagram">
+    <a href="https://www.instagram.com/alanovictors/?utm_source=qr&igshid=MzNlNGNkZWQ4Mg%3D%3D" target="_blank">ACESSE</a>
 </body>
 </html>
