--- a/github.html
+++ b/github.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Youtube</title>
+    <title>GitHub</title>
     <link rel="stylesheet" href="styles/social.css">
 </head>
 <body>
-    <img src="imagens/tela-youtube.jpg" alt="Youtube">
-    <a href="https://www.youtube.com/@alano.development" target="_blank">ACESSE</a>
+    <img src="imagens/tela-github.jpg" alt="Github">
+    <a href="https://github.com/alanovictor" target="_blank">ACESSE</a>
 </body>
 </html>
